@@ -4,6 +4,7 @@
 * [**] The comment composer now opens fullscreen, shows previews of the comment you are replying to, supports savings drafts, and clearly communicates the upload state and errors [#24075]
 * [*] Add depth indicators for comment threads to make them easier to follow [#24117]
 * [*] Enable dismissing the virtual keyboard in the experimental editor [#23988]
+* [*] Fix an issue with some featured images missing in Reader [#24137]
 * [*] Remove Submit Feedback form from the Me menu [#24020]
 * [*] Update iconography in Reader to match WordPress design system [#24132]
 * [*] Fix unselectable group blocks in the experimental editor [https://github.com/wordpress-mobile/GutenbergKit/pull/68]
